dropshot/tests/fail/bad_trait_only13.stderr
error[E0449]: visibility qualifiers are not permitted here
  --> tests/fail/bad_trait_only13.rs:25:5
   |
25 |     pub async fn bad_endpoint(
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error[E0449]: visibility qualifiers are not permitted here
  --> tests/fail/bad_trait_only13.rs:33:5
   |
33 |     pub async fn bad_channel(
   |     ^^^ help: remove the qualifier
   |
   = note: trait items always share the visibility of their trait

error: cannot find attribute `endpoint` in this scope
  --> tests/fail/bad_trait_only13.rs:21:7
   |
21 |     #[endpoint {
   |       ^^^^^^^^
   |
help: consider importing one of these attribute macros
   |
 5 + use dropshot::endpoint;
   |
 5 + use dropshot_endpoint::endpoint;
   |

error: cannot find attribute `channel` in this scope
  --> tests/fail/bad_trait_only13.rs:29:7
   |
29 |     #[channel {
   |       ^^^^^^^
   |
help: consider importing one of these attribute macros
   |
 5 + use dropshot::channel;
   |
 5 + use dropshot_endpoint::channel;
   |
